@@ -5,6 +5,7 @@ Maintained since version 0.3.1.
 
 2012-01-28  Camilla Berglund  <elmindreda@elmindreda.org>
 
+ * duffdriver.c dufffile.c duffutil.c: Put non-static functions on top.
  * duffdriver.c (process_clusters): Initialized cluster index.
  * duffdriver.c (report_cluster): Made use of get_field_terminator.
  * duffutil.c (read_path): Made use of get_field_terminator.
